--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
-backend_url = https://kylesvault-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url= https://sentianalyzer.1hipm7wvivy2.us-south.codeengine.appdomain.cloud/
+backend_url = https://kylesvault-3030.theiadockernext-1-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
+sentiment_analyzer_url= https://sentianalyzer.1hk37w837d5f.us-south.codeengine.appdomain.cloud/
